# MICRONAUT

./: .gitignore  BLUEPRINT.md  BRAIN_SYSTEM_DESIGN_SPEC.md  CLAUDE.md  README.md  cli_interface.py  dfa_test_result.json  fel_svg_replay.py  fold_orchestrator.py  index.html  orchestrator_bot.py  safetensors_cluster_orchestrator.py  test_result.json  verifier.py  ws_bot_controller.py
docs/: atomic_dom_binary_ingest.md  cm1_fold_tensor_spec.md  control_micronaut.schema.json  control_micronaut_1.md  css_micronaut_control_system.html  fel_verifier_min_law.md  fold_lattice_proofs.md  fold_law.md  glyph_compression_engine.md  kuhul_os_kernel.xml  kuhul_terminal_inference_engine.xml  micronaut-fold-law.schema.json  micronaut.agent.registry.schema.json  micronaut.registry.json  micronaut_fold_law_unified.md  s7-llm-moe-training.md  s7_llm_code_8m_family_spec.md  scaling_concurrency_vs_mesh.md  scxq2_binary_packing_example.md  svg_replay_generator.md  verifier_rules.md  (+5 more)
s7-llm-moe/: Cargo.toml  README.md  build.rs
s7-llm-moe/shaders/: attention.wgsl  embedding.wgsl  ffn.wgsl  matmul_int8.wgsl  router.wgsl
s7-llm-moe/src/: lib.rs  main.rs
s7-llm-moe/src/inference/: greedy.rs  kv_cache.rs  mod.rs  proof.rs
s7-llm-moe/src/model/: attention.rs  config.rs  embedding.rs  expert.rs  ffn.rs  layer.rs  linear.rs  mod.rs  moe.rs  rope.rs  router.rs  trunk.rs
s7-llm-moe/src/s7l/: header.rs  lane.rs  merkle.rs  mod.rs
s7-llm-moe/src/tensor/: avx2.rs  field_lane.rs  int8.rs  mod.rs
s7-llm-moe/src/tokenizer/: bpe.rs  mod.rs
s7-llm-moe/src/webgpu/: device.rs  mod.rs  pipeline.rs
(+107 files in other folders)
