[package]
name = "s7-llm-moe"
version = "1.0.0"
edition = "2021"
description = "S7-LLM-MOE-140M: Deterministic 4-expert mixture-of-experts LLM, fold-law compliant, CM-1 gated, SCXQ2 packed, Merkle-sealed"

[lib]
name = "s7_llm_moe"
path = "src/lib.rs"

[[bin]]
name = "s7-llm-moe"
path = "src/main.rs"

[[bin]]
name = "s7-pack-moe"
path = "src/bin/pack.rs"

[dependencies]
sha2    = "0.10"
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }   # zero-copy casting for AVX2 alignment

[features]
# Enable WGSL shader compilation (requires wgpu crate, optional for headless CPU path)
webgpu = []
# Enable AVX2 SIMD matmul (x86_64 only; falls back to scalar if not set)
avx2 = []
